# taxi_demand_predictor_follow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: feature_pipeline.yaml
models/: model.pkl
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_and_lightgbm_model.ipynb  input_example.json  model_schema.json
src/: config.py  data.py  frontend.py
