[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Igor Veksler <igor.veksler@wandb.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
requests = "^2.31.0"
pyarrow = "^14.0.2"
plotly = "^5.18.0"
xgboost = "^2.0.3"
lightgbm = "^4.2.0"
optuna = "^3.5.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
